--- a/yearly_precip_soil_moisture.ipynb
+++ b/yearly_precip_soil_moisture.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dbb4367a",
+   "id": "548aa6a9",
    "metadata": {},
    "source": [
     "## Hypothesis: The yearly total precipitation correlates with soil moisture levels in Corpus Christi\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "893ef9e9",
+   "id": "392a8012",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6b400317",
+   "id": "7e8065ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3fc98b0a",
+   "id": "788601f6",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9043ed3a",
+   "id": "2f75b5f2",
    "metadata": {},
    "source": [
     "**Let's have a graphical idea of the relationship between both variables**w"
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d76677ab",
+   "id": "c06188b7",
    "metadata": {},
    "outputs": [
     {
@@ -204,9 +204,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1f83d292",
+   "metadata": {},
+   "source": [
+    "**The positive slope of the regression line indicates that there is a positive relationship between precipitation and soil moisture; as precipitation increases, the soil moisture also tends to increase. The distribution of points suggests some variability around the regression line, which is expected in real-world data.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "869015ec",
+   "id": "03337a2d",
    "metadata": {
     "scrolled": true
    },
@@ -247,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "646f1d04",
+   "id": "061f047b",
    "metadata": {},
    "source": [
     "**The correlation between both varibles is not exactly clear from the above graph. We shall proceed with out discoveries**"
@@ -278,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "be74f9c8",
+   "id": "603ae6aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "592fe672",
+   "id": "1beffd1b",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fb25381",
+   "id": "2ad44075",
    "metadata": {},
    "source": [
     "**Correlation (r): The Pearson's correlation coefficient is approximately  0.571.This suggests a moderate positive linear relationship between yearly total precipitation and soil moisture levels in Corpus Christi. This means as precipitation increases, soil moisture also tends to increase to some extent.**\n",
@@ -317,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "56ced0ba",
+   "id": "7bed362f",
    "metadata": {},
    "outputs": [
     {
@@ -336,9 +344,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c6096a56",
+   "metadata": {},
+   "source": [
+    "**A Spearman correlation coefficient of 0.589 suggests a moderate positive association between the yearly precipitaion and soilmoisture. This result suggests that years with more precipitation tend to also be years with higher soil moisture levels, but there are likely other factors influencing soil moisture as well, given that the correlation is not very close to 1.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a74e73ec",
+   "id": "a0383b2a",
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "734025c5",
+   "id": "63481be6",
    "metadata": {},
    "source": [
     "**The R-squared value is 0.327, which means that approximately 32.7% of the variability in soil moisture is explained by the model. This isn't very high, suggesting that precipitation alone does not fully explain the changes in soil moisture.**\n",
@@ -406,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "dce52ab1",
+   "id": "6c1566b7",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "481f1152",
+   "id": "a209e1e8",
    "metadata": {},
    "source": [
     "**The positive slope of the regression line indicates that there is a positive relationship between precipitation and soil moisture; as precipitation increases, the soil moisture also tends to increase. The distribution of points suggests some variability around the regression line, which is expected in real-world data.**"
@@ -447,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f4476482",
+   "id": "0dfe67c9",
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +496,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a41b5fa",
+   "id": "20300b7c",
    "metadata": {},
    "source": [
     "**Lag 0: At lag 0, the correlation is at its highest point on the plot, indicating that there's a strong positive correlation when the two series are aligned with no lag. This suggests that there's a contemporaneous relationship between precipitation and soil moisture—when precipitation is high (or low), soil moisture is also high (or low) at the same time.**\n",
@@ -491,12 +507,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0affeb44",
+   "cell_type": "markdown",
+   "id": "80aa6fda",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Based on all the above analysis, we reject the null hypothesis"
+   ]
   }
  ],
  "metadata": {
