--- a/Avg_mon_temp_in_CC.ipynb
+++ b/Avg_mon_temp_in_CC.ipynb
@@ -15,20 +15,40 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Hypothesis 1 : Average monthly temperature in Corpus Christi over 30 years follows a normal distribution."
+      ],
+      "metadata": {
+        "id": "CZdCxgIs69YK"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "from scipy.stats import shapiro\n",
         "import calendar\n",
-        "from scipy.stats import ttest_ind"
+        "from scipy.stats import probplot\n",
+        "from scipy.stats import ttest_ind\n",
+        "from scipy.stats import f_oneway\n",
+        "from scipy.stats import ttest_rel\n"
       ],
       "metadata": {
         "id": "CSJrLj1klvHi"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Reading Data From : https://climate.northwestknowledge.net/NWTOOLBOX/formattedDownloads.php"
+      ],
+      "metadata": {
+        "id": "xMqAwdwQ7Tyj"
+      }
     },
     {
       "cell_type": "code",
@@ -38,7 +58,7 @@
       "metadata": {
         "id": "S_NICqymmOhF"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -54,7 +74,7 @@
         "id": "ggsv5_9HmVXZ",
         "outputId": "13b0909c-ed5b-4481-e12c-47a53e61f64b"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -473,6 +493,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Adding date column\n"
+      ],
+      "metadata": {
+        "id": "V9xuQZwh7o50"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "temp_df['Date'] = pd.to_datetime(temp_df[['Year', 'Month', 'Day']])"
@@ -480,7 +509,7 @@
       "metadata": {
         "id": "NeMq3X7OnaU1"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -497,7 +526,7 @@
         "id": "YH9ad921njg9",
         "outputId": "59ff0960-533c-423c-a696-e53435b54acd"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -925,6 +954,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Plotting Histogram for Monthly average of tmin, tmax over 30 years(Jan 1994- Jan 2024)"
+      ],
+      "metadata": {
+        "id": "TeSgkmXp7tqw"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Calculate monthly means for tmmn and tmmx\n",
@@ -961,7 +999,7 @@
         "id": "yDvSC6jERvAr",
         "outputId": "52fd0831-41fc-47a8-a3b3-b79c10757338"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -976,12 +1014,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Plotting Q-Q Plot for Monthly average of tmin, tmax over 30 years(Jan 1994- Jan 2024)"
+      ],
+      "metadata": {
+        "id": "uEwLO6dv8JYf"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "from scipy.stats import probplot\n",
-        "\n",
         "# Calculate monthly means for 'tmmn(degC)' and 'tmmx(degC)'\n",
         "monthly_means_tmmn = temp_df.groupby('Month')['tmmn(degC)'].mean()\n",
         "monthly_means_tmmx = temp_df.groupby('Month')['tmmx(degC)'].mean()\n",
@@ -1008,7 +1051,7 @@
         "id": "sOkCtndZjIGJ",
         "outputId": "ee21304a-31e2-462c-b6aa-54fef9511d43"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1025,70 +1068,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from scipy.stats import shapiro\n",
-        "\n",
-        "# Calculate monthly means for 'tmmn(degC)' and 'tmmx(degC)'\n",
-        "monthly_means_tmmn = temp_df.groupby('Month')['tmmn(degC)'].mean()\n",
-        "monthly_means_tmmx = temp_df.groupby('Month')['tmmx(degC)'].mean()\n",
-        "\n",
-        "# Perform Shapiro-Wilk test for normality\n",
-        "stat_tmmn, p_value_tmmn = shapiro(monthly_means_tmmn)\n",
-        "stat_tmmx, p_value_tmmx = shapiro(monthly_means_tmmx)\n",
-        "\n",
-        "# Print the results\n",
-        "print(f'Shapiro-Wilk Test for tmmn(degC) Monthly Means:')\n",
-        "print(f'Statistic: {stat_tmmn}')\n",
-        "print(f'P-value: {p_value_tmmn}')\n",
-        "print(f'Reject the null hypothesis: {p_value_tmmn < 0.05}')\n",
-        "\n",
-        "print('\\n')\n",
-        "\n",
-        "print(f'Shapiro-Wilk Test for tmmx(degC) Monthly Means:')\n",
-        "print(f'Statistic: {stat_tmmx}')\n",
-        "print(f'P-value: {p_value_tmmx}')\n",
-        "print(f'Reject the null hypothesis: {p_value_tmmx < 0.05}')\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pQe1_eucjS9M",
-        "outputId": "6a4ca546-3a71-4dd3-ac67-0a91e2a81585"
-      },
-      "execution_count": 72,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Shapiro-Wilk Test for tmmn(degC) Monthly Means:\n",
-            "Statistic: 0.8994670510292053\n",
-            "P-value: 0.15612667798995972\n",
-            "Reject the null hypothesis: False\n",
-            "\n",
-            "\n",
-            "Shapiro-Wilk Test for tmmx(degC) Monthly Means:\n",
-            "Statistic: 0.9108794927597046\n",
-            "P-value: 0.2189556211233139\n",
-            "Reject the null hypothesis: False\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "# Assuming you have loaded your data into temp_df\n",
-        "# Example:\n",
-        "# temp_df = pd.read_csv(\"/content/corpus_christi_temp_data.csv\", header=0, parse_dates=True, skiprows=9)\n",
-        "\n",
-        "# Combine 'Year', 'Month', and 'Day' columns into a single 'Date' column\n",
-        "temp_df['Date'] = pd.to_datetime(temp_df[['Year', 'Month', 'Day']])\n",
-        "\n",
         "# Calculate monthly averages for temperature (assuming columns are 'tmmn(degC)' and 'tmmx(degC)')\n",
         "temp_df['Monthly_Avg'] = temp_df[['tmmn(degC)', 'tmmx(degC)']].mean(axis=1)\n",
         "\n",
@@ -1108,7 +1087,7 @@
         "id": "H9xO5bzFj3I2",
         "outputId": "ec92ad9c-07a9-4053-b735-412f8c7f8d63"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1125,17 +1104,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "# Assuming you have loaded your data into temp_df\n",
-        "# Example:\n",
-        "# temp_df = pd.read_csv(\"/content/corpus_christi_temp_data.csv\", header=0, parse_dates=True, skiprows=9)\n",
-        "\n",
-        "# Combine 'Year', 'Month', and 'Day' columns into a single 'Date' column\n",
-        "temp_df['Date'] = pd.to_datetime(temp_df[['Year', 'Month', 'Day']])\n",
-        "\n",
         "# Calculate monthly averages for Tmin and Tmax\n",
         "temp_df['Tmin_Monthly_Avg'] = temp_df.groupby(['Year', 'Month'])['tmmn(degC)'].transform('mean')\n",
         "temp_df['Tmax_Monthly_Avg'] = temp_df.groupby(['Year', 'Month'])['tmmx(degC)'].transform('mean')\n",
@@ -1168,7 +1136,7 @@
         "id": "1mfKO_aqlNma",
         "outputId": "bc070359-be7a-4da0-b25e-2b903932255a"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1181,6 +1149,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Plotting Histogram for each month of tmin and tmax"
+      ],
+      "metadata": {
+        "id": "Lw2rlScb8s7_"
+      }
     },
     {
       "cell_type": "code",
@@ -1222,7 +1199,7 @@
         "id": "ecZmf3uCgztm",
         "outputId": "573934b9-052c-49c1-843e-dbcf9c05022f"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1347,10 +1324,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#ANOVA Test"
+      ],
+      "metadata": {
+        "id": "AMuhj8rV89G8"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "from scipy.stats import f_oneway\n",
-        "\n",
         "# Separate data for 'tmmn(degC)' and 'tmmx(degC)'\n",
         "tmmn_data = temp_df.groupby(['Year', 'Month'])['tmmn(degC)'].mean()\n",
         "tmmx_data = temp_df.groupby(['Year', 'Month'])['tmmx(degC)'].mean()\n",
@@ -1393,7 +1377,7 @@
         "id": "RMy--ztgiIlW",
         "outputId": "75bc641a-71f1-4afe-8a1e-e0b59194fbbc"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1416,10 +1400,33 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "ANOVA Results:\n",
+        "ANOVA Results for tmmn(degC): The extremely low p-value suggests that there is a significant difference in the mean temperatures across months for 'tmmn(degC)'.\n",
+        "\n",
+        "ANOVA Results for tmmx(degC):\n",
+        "Similarly, the extremely low p-value indicates a significant difference in the mean temperatures across months for 'tmmx(degC)'.\n",
+        "\n",
+        "\n",
+        "Since the p-values are much smaller than 0.05, we reject the null hypothesis in both cases. Therefore, we conclude that there is a significant difference in mean temperatures across different months for both 'tmmn(degC)' and 'tmmx(degC)'."
+      ],
+      "metadata": {
+        "id": "2raXrIIe9DOR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Paired t-test"
+      ],
+      "metadata": {
+        "id": "ud-O6zJP9KXC"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "from scipy.stats import ttest_rel\n",
-        "\n",
         "# Separate data for 'tmin' and 'tmax'\n",
         "tmin_data = temp_df.groupby(['Year', 'Month'])['tmmn(degC)'].mean()\n",
         "tmax_data = temp_df.groupby(['Year', 'Month'])['tmmx(degC)'].mean()\n",
@@ -1446,7 +1453,7 @@
         "id": "ybCojsvFmNRq",
         "outputId": "debefbed-a042-402c-81ae-889ed2c7c91a"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1459,6 +1466,22 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Paired t-test Result:\n",
+        "The paired t-test results indicate a significant difference between 'tmin' and 'tmax'.\n",
+        "\n",
+        "T-statistic: The t-statistic is a measure of how many standard deviations the means of two groups are apart. In this case, the t-statistic is approximately -104.78.\n",
+        "\n",
+        "P-value: The p-value is the probability of observing a t-statistic as extreme as the one calculated, assuming that the null hypothesis (no difference between 'tmin' and 'tmax') is true. The extremely low p-value (close to zero and in scientific notation, indicates strong evidence against the null hypothesis.\n",
+        "\n",
+        "With such a low p-value, you reject the null hypothesis. Therefore, you can conclude that there is a statistically significant difference between the monthly average temperatures of 'tmin' and 'tmax'. In practical terms, it suggests that the temperatures measured as 'tmin' and 'tmax' are not likely to come from the same distribution; there is a meaningful difference between them.\n"
+      ],
+      "metadata": {
+        "id": "a36IwgBF9X1T"
+      }
     }
   ]
 }
